# POShadik

./: CMakeLists.txt
src/client/: clientMain.c  clientSharedInterface.c  clientSharedInterface.h  clientThreadsManager.c  clientThreadsManager.h  gameInitializer.c  gameInitializer.h  inputManager.c  inputManager.h
src/client/gameFieldConfigs/: 1
src/gameFieldConfigs/: 1  2  3
src/server/: gameField.c  gameField.h  gameFieldGenerator.c  gameFieldGenerator.h  gameFieldLogic.c  gameFieldLogic.h  serverMain.c  serverSharedInterface.c  serverSharedInterface.h  serverThreadManager.c  serverThreadManager.h
src/shared/: clientServerInterface.c  clientServerInterface.h  gameConfiguration.c  gameConfiguration.h  gameFieldGenerator.c  gameFieldGenerator.h  sharedData.c  sharedData.h
src/shared/pipeSocketLib/: CMakeLists.txt  pipe.c  pipe.h  socket.c  socket.h
src/shared/systemStatusAppProcesses/: appSettings.h  appUtilities.c  appUtilities.h  sensor.c  sensorCommunicationManager.c  sensorCommunicationManager.h
